Fixed background color on iphone x

--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: 'Nunito Sans', sans-serif !important;
+  background-color: black;
 }
 
 .video-bg-wrapper {
